# estivision-mp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: chessboard_generator.py
src/estv/: __main__.py
src/estv/devices/: camera_calibrator.py  camera_stream.py  camera_stream_manager.py  media_device_manager.py  stereo_calibrator.py
src/estv/estimators/: pose_drawer.py  pose_estimator.py  triangulation.py
src/estv/gui/: camera_preview_window.py  main_window.py  safe_widgets.py  style_constants.py
src/estv/trackers/: mediapipe_tracker.py  osc_sender.py  tracker_base.py
tests/: test_camera_calibrator.py  test_camera_preview_window.py  test_camera_stream_manager.py  test_safe_widgets.py
